feat: add file upload with uploadthing.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,17 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+/* UploadThing styling for Tailwind v4 */
+
+@import "uploadthing/tw/v4";
+/* @source "../node_modules/@uploadthing/react/dist"; */
+@source "../../node_modules/@uploadthing/react/dist/index.css";
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
+  --font-sans:
+    var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
